Perkin-UAT/force-app/main/default/objects/Opportunity_Snapshot__c/Opportunity_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Opportunity Snapshot</label>
    <nameField>
        <label>Opportunity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>