Perkin-UAT/force-app/main/default/objects/Opportunity_Snapshot__c/fields/From_Stage__c.field-meta.xml
<CustomField>
    <fullName>From_Stage__c</fullName>
    <label>From Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>