Perkin-UAT/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Territory_name__c.field-meta.xml
<CustomField>
    <fullName>Territory_name__c</fullName>
    <label>Territory name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>