Perkin-UAT/force-app/main/default/objects/Opportunity_Snapshot__c/fields/To_Stage__c.field-meta.xml
<CustomField>
    <fullName>To_Stage__c</fullName>
    <label>To Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>